kubernetes-deployment/mongo-deployment.yml
#Headless Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongodb-service
spec:
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  selector:
    app: mongo
  clusterIP: None  # We Use DNS, Thus ClusterIP is not relevant

---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: mongo-pv-claim # name of PVC essential for identifying the storage data
#  labels:
#    app: mongo
#    tier: database
#spec:
#  accessModes:
#    - ReadWriteOnce   #This specifies the mode of the claim that we are trying to create.
#  resources:
#    requests:
#      storage: 1Gi    #This will tell kubernetes about the amount of space we are trying to claim.
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  serviceName: "mongodb-service"
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
      name: mongodb-service


    spec:
#      affinity:
#        podAntiAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            - labelSelector:
#                matchExpressions:
#                  - key: app
#                    operator: In
#                    values:
#                      - mongo
#              topologyKey: "kubernetes.io/hostname"
      terminationGracePeriodSeconds: 10
      containers:
        - image: mongo:latest
          name: mongo
#          command:
#            - mongod
#            - "--replSet"
#            - rs0
#            - "--bind_ip_all"
#            - 0.0.0.0

          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db #This is the path in the container on which the mounting will take place.
#      volumes: #Static provision
#        - name: mongo-persistent-storage # Obtaining 'volume' from PVC
#          persistentVolumeClaim:
#            claimName: mongo-pv-claim
  volumeClaimTemplates: #Dynamic provision
    - metadata:
        name: mongo-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
