kubernetes-deployment/payment-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: payment-service
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30082
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  selector:
    matchLabels:
      app: payment-service
  replicas: 3
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - payment-service
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: payment-service
          image: shwetalishine/eventbookingapi-payment:1.0
#          image: shwetalishine/payment-service:1.0
#          image: shwetalishine/test-kafka-payment:1.0
          #          image: shwetalishine/test
          #          imagePullPolicy: Never
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
