kubernetes-deployment/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: microservice-one.com
      http:
        paths:
          - path: /api/v1/events/
            pathType: Prefix
            backend:
              service:
                name: spring-mongo-service
                port:
                  number: 8080
